# -*- eval: (cargo-minor-mode 1)

[package]
name = "synapse_compressor"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
clokwerk = "0.4"
env_logger = "0.9"
log = "0.4"

[dependencies.synapse_auto_compressor]
git = "https://github.com/matrix-org/rust-synapse-compress-state"
rev = "6a065de6fc4910da980fce862710195521fa9f81"
default-features = false

[profile.release]
lto = true
opt-level = "z"
strip = true
